--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I've decided to become a full-stack web developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Saint Louis, Missouri</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love technology and building things with it!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Developing new technologies</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Still living in Saint Louis</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It's the first step to my career!</p>
     </section>
 
     <footer id="footer">
